--- a/twitter_clone/src/components/App.css
+++ b/twitter_clone/src/components/App.css
@@ -1,21 +1,28 @@
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 .App {
   text-align: center;
 }
 
-
 .App-header {
-  background-color: #282c34;
-  height: 280px;
+  background: url("./OverProject.png") no-repeat center center;
+  background-size: cover;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 
