--- a/twitter_clone/src/components/EntryList.css
+++ b/twitter_clone/src/components/EntryList.css
@@ -1,20 +1,176 @@
-.flitBox {
-    background-color: white;
-
+.flitList {
+  width: 560px;
+  display: block;
+  margin: auto;
+  background-color: #dde1e2;
+  padding-bottom: 2em;
+  box-shadow: #bdc3c7 0 5px 5px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  margin-bottom: 2em;
+}
+.flitList li {
+  padding: 1em 0;
+}
+.flitList li:nth-child(even) {
+  background-color: #d3d7d8;
 }
 
-span {
-    font-weight: bold;
+.bubble {
+  width: 100%;
+  padding: 0.5em 1em;
+  line-height: 1.4em;
+  padding: 20px;
+  background-color: #ecf0f1;
+  position: relative;
+  border-radius: 8px;
+  text-align: left;
+  display: inline-block;
+}
+.bubble:hover > .over-bubble {
+  opacity: 1;
 }
 
-.handle {
-    color:#697785;
-    font-weight: lighter;
-}
-.flitBox:hover {
-    background-color: #F6F8FA;
+.bubble-container {
+  width: 75%;
+  display: block;
+  position: relative;
+  padding-left: 20px;
+  display: inline-block;
 }
 
-.profImg {
-    border-radius: 100%;
+.arrow {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 12px;
+  bottom: 25%;
+  height: 0;
+  width: 0;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid #ecf0f1;
+}
+
+.avatar {
+  width: 18%;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  overflow: hidden;
+  margin-left: 2%;
+}
+.avatar img {
+  width: 100%;
+  border-radius: 50%;
+  border: 5px solid #ecf0f1;
+  position: relative;
+}
+.avatar:hover > .hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.hover {
+  position: absolute;
+  width: 100%;
+  height: 95%;
+  background-color: rgba(83, 151, 213 0.5);
+  top: 0;
+  font-size: 1.9em;
+  border: 5px solid #5cc0ff;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  padding-top: 24%;
+  opacity: 0;
+  font-family: "FontAwesome";
+  font-weight: 300;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+}
+
+.icon-twitter {
+  font-size: 1.5em;
+}
+
+.new {
+  position: absolute;
+  right: 5%;
+}
+
+.over-bubble {
+  line-height: 1.4em;
+  padding-top: 10%;
+  background-color: rgba(236, 240, 241, 0.8);
+  position: relative;
+  border-radius: 8px;
+  text-align: center;
+  display: inline-block;
+  position: absolute !important;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in;
+  font-size: 2.8em;
+  text-shadow: white 1px 1px 0;
+}
+
+.action {
+  margin-right: 0.3em;
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in;
+}
+
+.icon-star {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+}
+.icon-star:hover {
+  cursor: pointer;
+  color: #f39c12;
+}
+
+.icon-retweet {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+}
+.icon-retweet:hover {
+  cursor: pointer;
+  color: #16a085;
+}
+
+.icon-mail-reply {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+}
+.icon-mail-reply:hover {
+  cursor: pointer;
+  color: #3498db;
+}
+
+h3 {
+  font-size: 1.2em;
+  font-weight: bold;
+  display: inline-block;
+  margin-bottom: 0.2em;
+  color: #95a5a6;
+}
+
+.retweet .icon-retweet {
+  color: white;
+  margin: auto;
+  width: 100%;
+  display: block;
+  font-size: 1.2em;
 }
